; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_ghb-dvd.c_ghb_dvd_set_current.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_ghb-dvd.c_ghb_dvd_set_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@G_FILE_ATTRIBUTE_STANDARD_TYPE = common dso_local global i32 0, align 4
@G_FILE_QUERY_INFO_NONE = common dso_local global i32 0, align 4
@G_FILE_TYPE_SPECIAL = common dso_local global i64 0, align 8
@DRIVE_CDROM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_dvd_set_current(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @ghb_resolve_symlink(i32* %8)
  store i32* %9, i32** %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @g_free(i32* %17)
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  store i32* null, i32** %20, align 8
  br label %21

21:                                               ; preds = %14, %2
  %22 = load i32*, i32** %7, align 8
  %23 = call i32* @g_file_new_for_path(i32* %22)
  store i32* %23, i32** %5, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* @G_FILE_ATTRIBUTE_STANDARD_TYPE, align 4
  %26 = load i32, i32* @G_FILE_QUERY_INFO_NONE, align 4
  %27 = call i32* @g_file_query_info(i32* %24, i32 %25, i32 %26, i32* null, i32* null)
  store i32* %27, i32** %6, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %45

30:                                               ; preds = %21
  %31 = load i32*, i32** %6, align 8
  %32 = call i64 @g_file_info_get_file_type(i32* %31)
  %33 = load i64, i64* @G_FILE_TYPE_SPECIAL, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load i32*, i32** %7, align 8
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  store i32* %36, i32** %38, align 8
  br label %42

39:                                               ; preds = %30
  %40 = load i32*, i32** %7, align 8
  %41 = call i32 @g_free(i32* %40)
  br label %42

42:                                               ; preds = %39, %35
  %43 = load i32*, i32** %6, align 8
  %44 = call i32 @g_object_unref(i32* %43)
  br label %48

45:                                               ; preds = %21
  %46 = load i32*, i32** %7, align 8
  %47 = call i32 @g_free(i32* %46)
  br label %48

48:                                               ; preds = %45, %42
  %49 = load i32*, i32** %5, align 8
  %50 = call i32 @g_object_unref(i32* %49)
  ret void
}

declare dso_local i32* @ghb_resolve_symlink(i32*) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i32* @g_file_new_for_path(i32*) #1

declare dso_local i32* @g_file_query_info(i32*, i32, i32, i32*, i32*) #1

declare dso_local i64 @g_file_info_get_file_type(i32*) #1

declare dso_local i32 @g_object_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
